[tool.poetry]
name = "url_shortener"
version = "0.1.0"
description = ""
authors = ["Francisco Javier Jurado Moreno <9376816+Beetelbrox@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
